--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
         kill $(pgrep -f bot0.rb) 2> /dev/null && echo Instance killed.
         echo Updating...
         bundle update
-        echo Restarting bot0...
-        bundle exec ./bot0.rb &
+        echo (Re)Starting bot0...
+        bundle exec ./bot0.rb
