--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,17 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Update dependencies
       run: |
-        echo Killing previous instance...,
-        kill $(pgrep -f bot0.rb) 2> /dev/null && echo Instance killed.
-        echo Updating...
+        echo Updating dependencies...
         bundle update
-        echo (Re)Starting bot0...
-        bundle exec ./bot0.rb
+  deploy:
+    runs-on: self-hosted
+    steps:
+      - uses: actions/chechout@v2
+      - name: Start bot
+        run: |
+          echo Killing previous instance...,
+          kill $(pgrep -f bot0.rb) 2> /dev/null && echo Instance killed.
+          echo "(Re)Starting bot0..."
+          bundle exec ./bot0.rb
